# BenD

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: conf.py  general_requirements.txt  index.rst
docs/_static/: custom.css
docs/implementation/: index.rst
docs/reference/: index.rst
docs/release_notes/: index.rst
docs/user_guide/: cli.rst  index.rst  math.rst  overview.rst  tutorial.rst
src/bendee/: __about__.py  __init__.py  _logging.py  _typing.py  api.py  cli.py  config.py  framework.py  models.py  solution.py  staging.py  util.py
tests/: __init__.py  test_models.py
tests/models/: knapsack_lin.mps.bz2  knapsack_lin_bounds.mps.bz2  knapsack_lin_bounds_max.mps.bz2  knapsack_lin_decomposable.mps.bz2  knapsack_lin_decomposable_max.mps.bz2  knapsack_lin_max.mps.bz2  knapsack_lin_neg_lb.mps.bz2  knapsack_lin_neg_lb_max.mps.bz2  knapsack_lin_some_zero_sub_obj.mps.bz2  knapsack_lin_some_zero_sub_obj_max.mps.bz2  knapsack_lin_zero_master_obj.mps.bz2  knapsack_lin_zero_master_obj_max.mps.bz2  knapsack_lin_zero_sub_obj.mps.bz2  knapsack_lin_zero_sub_obj_max.mps.bz2  knapsack_qp_decomposable.mps.bz2  knapsack_qp_decomposable_max.mps.bz2  knapsack_qp_plus_objconst.mps.bz2  knapsack_qp_plus_objconst_max.mps.bz2  simple.mps.bz2
