[project]
name = "bendee"
version = "0.1.0"
description = "A Python package facilitating Benders Decomposition with gurobipy"
readme = "README.md"
authors = [
    { name = "Riley Clement", email = "venaturum@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "gurobipy>=10.0.0",
    "numpy>=2",
    "pyyaml>=6.0.2",
    "scipy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "line_profiler>=4.1.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]

[project.scripts]
bendee = "bendee.cli:cli"

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
src_paths = ["staircase", "tests"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.ruff]
exclude = ["*.ipynb", ".ipynb_checkpoints"]
src = ["src", "tests"]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
